fix: 97367, fix scrollbar en etablissement et transcription + rendre invisible...

--- a/src/views/pages/requeteCreation/commun/scss/ApercuReqCreationPage.scss
+++ b/src/views/pages/requeteCreation/commun/scss/ApercuReqCreationPage.scss
@@ -80,9 +80,20 @@ $height: calc($spacing * 2.5);
 .ApercuReqCreationEtablissementPage {
   display: flex;
   height: 88vh;
+  .ResumeRequeteCreation {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+  }
   .FocusPieceJustificative {
-    height: 88vh;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+  }
+  .OngletsApercuCreationEtablissement {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
   }
 }
 
@@ -139,16 +150,30 @@ $height: calc($spacing * 2.5);
 }
 
 .ApercuReqCreationTranscriptionPriseEnChargePage {
+  height: 88vh;
+
+  .ResumeRequeteCreation {
+    height: 88vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+  }
 
   .ResumeRequeteCreation.component.is-open {
     flex-grow: 1;
   }
   .VoletAvecOnglet {
     flex-grow: 2;
+    height: 88vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
   }
   .FocusPieceJustificative {
     height: 88vh;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
   }
   .FocusPieceJustificative.component.is-open {
     flex-grow: 2;
